plugins {
    id 'application'
    id 'ru.clevertec.checksystem.plugin.pdfprint' version "1.1.5"
}

group = 'ru.clevertec.checksystem'
version = '1.0'
description = 'checksystem-cli'

java {
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_14
}

application {
    mainClass = "ru.clevertec.checksystem.cli.Main"
}

repositories {
    mavenCentral()
}

def coreProject = project(":checksystem-core");

dependencies {
    implementation coreProject
    testImplementation "org.junit.jupiter:junit-jupiter:5.7.0"
}

sourceSets.main.resources.srcDirs += "${coreProject.projectDir}/src/main/resources"

// https://www.eclipse.org/aspectj/doc/released/README-194.html
def additionalJvmArgs = [
        "--add-opens",
        "java.base/java.lang=ALL-UNNAMED",
]

test {
    useJUnitPlatform()
    testLogging.showStandardStreams = true;
    doFirst {
        jvmArgs additionalJvmArgs
        coreProject.configurations.runtimeAgent.each { jvmArgs "-javaagent:${it.absolutePath}" }
    }
}

tasks.withType(JavaExec) {
    javaExec -> javaExec.doFirst {
        jvmArgs additionalJvmArgs
        coreProject.configurations.runtimeAgent.each { jvmArgs "-javaagent:${it.absolutePath}" }
    }
}

def template = true;

pdfPrintSettings.runTaskName = "run"
pdfPrintSettings.inputFilePath = "$rootDir/../examples/checks_serialized.json"
pdfPrintSettings.inputFileFormat = "json"

pdfPrintSettings.templateIsUsed = template;
pdfPrintSettings.templateUrl = "https://github.com/stebadmitriy/files/raw/main/Clevertec_Template.pdf"
pdfPrintSettings.topOffset = 94;
pdfPrintSettings.templateOutput = "$rootDir/resources/templates/Clevertec_Template.pdf"

pdfPrintSettings.outputPdfPath = "$rootDir/resources/CHECKS_" + (template ? "WITH" : "WITHOUT") + "_TEMPLATE.pdf"
